# llamaman

./: .chat_history  .gitignore  build.sh  configure  index.html  install.sh  load_tools.sh  package-lock.json  package.json  tsconfig.json  uninstall.sh  vite.config.ts  vitest.config.ts
src/: App.jsx  App.tsx  Configuration.tsx  FileTree.tsx  InputBar.tsx  MessageBox.tsx  Messages.tsx  NotificationComponent.tsx  StreamingComponent.tsx  index.css  main.tsx  platforms.ts  tools.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/clients/: AnthropicClient.ts  AwsClient.ts  Client.ts  OllamaClient.ts  OpenRouterClient.ts  factory.ts
src/prompts/: default_tool_system_prompt.js  default_tool_system_prompt.ts  utils.ts
src/tools/: default_tools.ts  tools.ts  user_tools.ts
src/types/: AwsCredential.ts  FuncDescription.ts  Message.ts  Notification.ts  Sender.ts  StreamingArgs.ts  Tool.ts  UserConfig.ts
tests/: App.test.tsx  setup.ts  utils.test.ts
tests/clients/: AwsClient.test.ts  OllamaClient.test.ts  factory.test.ts
tests/prompts/: utils.test.ts
