[package]
name = "llamaman"
version = "0.1.0"
description = "A tool using agent"
license = "MIT"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.16"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
